--- a/Week One/Day_1.html
+++ b/Week One/Day_1.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favourite page</title>
+    <title>My Favorite Films and Books</title>
+
 </head>
 <body>
      <h1><em>Welcome To My World</em></h1>
@@ -15,34 +16,34 @@
         <li>The Green Mile </li>
       </ol>
   
-      <h3> 	&lt;	&lt;Gallery Of Posters&gt;	&gt;</h3>
+      <h3>Gallery of Posters</h3>
       <div class="imgs_gallery" >
-      <img src="/Week One/images/leon.jpg" alt="Leon" width = "200px" height="200px">
-      <img src="/Week One/images/shutter.jpg" alt="shutterisland"  width = "200px" height="200px">
-      <img src="/Week One/images/greenmile.jpg" alt="greemile"  width = "200px" height="200px">
+        <img src="../Week One/images/leon.jpg" alt="Poster of Leon The Professional" width="100%" height="200px">
+      <img src="../Week One/images/shutter.jpg" alt="Poster of Theshutter island"  width = "100%" height="200px">
+      <img src="../Week One/images/greenmile.jpg" alt="Poster of The Green Mile"  width = "100%" height="200px">
       </div>
 
-      <h3> 	&lt;&lt; YOu Can Watch It &gt;	&gt;</h3>
+      <h3>YOu Can Watch It/h3>
        <ul>
         <li><a href="https://www.netflix.com/eg-en/" target="_blank">Netflix</a></li>
         <li><a href="https://www.imdb.com/" target="_blank">IMDb</a></li>
        </ul>
        <!--Fav Books-->
-      <h2>Fav Books : </h2>
+      <h2>Favorite Books : </h2>
       <ol>
-        <li>The Little Peince</li>
-        <li>1984</li>
+        <li>The Little Prince</li>
+        <li>Game Of thrones</li>
         <li>Yoga Anatomy</li>
       </ol>
   
-      <h3>&lt;&lt;Gallery Of Covers&gt;	&gt;</h3>
+      <h3>Gallery Of Covers</h3>
       <div class="imgs_gallery" >
-      <img src="/Week One/images/little.jpg" alt="thelittlePrince" width = "200px" height="200px">
-      <img src="/Week One/images/game.jpg" alt="gameofthrones"  width = "200px" height="200px">
-      <img src="/Week One/images/yoga.jpg" alt="yogaanatomy"  width = "200px" height="200px">
+      <img src ="../Week One/images/little.jpg" alt="Cover of Thelittle Prince" width = "200px" height="200px">
+      <img src="../Week One/images/game.jpg" alt="Cover Of Game Of Thrones"  width = "200px" height="200px">
+      <img src="../Week One/images/yoga.jpg" alt="COver Of Yoga Anatomy"  width = "200px" height="200px">
       </div>
 
-      <h3> 	&lt;&lt; YOu Can Read It &gt;	&gt;</h3>
+      <h3>YOu Can Read It</h3>
        <ul>
         <li><a href="https://www.goodreads.com/?ref=nav_hom" target="_blank">GoodReads</a></li>
         <li><a href="https://www.booking-wp-plugin.com/" target="_blank">Bookly</a></li>
