--- a/Week Two Css/Day_01.html
+++ b/Week Two Css/Day_01.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card</title>
+    <!--Css links------------------------------------------>
     <link rel="stylesheet" href="../Week Two Css/Day _01.css">
+    <!--Font Awesome------------------------------------------>
+    <link rel="stylesheet" href="../Week Two Css/fontawesome-free-6.6.0-web/css/all.min.css">
  
 
 </head>
@@ -16,7 +19,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="profile-pic">
-                                <img src="../Week Two Css/images/pic-profile.jpg" alt="profile_picture" id = "prof-img">
+                                <img src="../Week Two Css/images/pic-profile.png" alt="profile_picture" id = "prof-img">
                             </div>
                             <div class="profile-desc">
                                 <h1>Omnia Saged</h1>
@@ -25,13 +28,20 @@
                                     "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
                             </div>
                             <div class="social-links">
-                                <ul>
-                                    
-                                </ul>
+                            <ul>
+                                <li><a href="https://www.facebook.com/share/14a4EpNZ5C/" target="_blank" class="icon facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/foxayaa/profilecard/?igsh=MWU0cm8zcjZkZXV1Nw==" target="_blank" class="icon instagram"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/omnia-saged-5b186623a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="icon linkedin"><i class="fa-brands fa-linkedin"></i></a></li>
+
+
+
+                            </ul>
                             </div>  
                         </div>
                     </div>
                 </div>
     </div>
+    <!--Font Awesome------------------------------------------>
+   <script src="../Week Two Css/fontawesome-free-6.6.0-web/js/all.min.js"></script>
 </body>
 </html>
