--- a/Week Two Css/Day_01/Day_01.html
+++ b/Week Two Css/Day_01/Day_01.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card</title>
     <!--Css links------------------------------------------>
-    <link rel="stylesheet" href="../Week Two Css/Day _01.css">
+    <link rel="stylesheet" href="../Day_01/Day _01.css">
     <!--Font Awesome------------------------------------------>
-    <link rel="stylesheet" href="../Week Two Css/fontawesome-free-6.6.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.min.css">
  
 
 </head>
@@ -19,7 +19,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="profile-pic">
-                                <img src="../Week Two Css/images/pic-profile.png" alt="profile_picture" id = "prof-img">
+                                <img src="../images/pic-profile.png" alt="profile_picture" id = "prof-img">
                             </div>
                             <div class="profile-desc">
                                 <h1>Omnia Saged</h1>
