--- a/Week Two Css/Day_01/Day_01.html
+++ b/Week Two Css/Day_01/Day_01.html
@@ -42,6 +42,6 @@
                 </div>
     </div>
     <!--Font Awesome------------------------------------------>
-   <script src="../Week Two Css/fontawesome-free-6.6.0-web/js/all.min.js"></script>
+   <script src="../fontawesome-free-6.6.0-web/js/all.min.js"></script>
 </body>
 </html>
