--- a/Week Two Css/Day_04/Day-04.html
+++ b/Week Two Css/Day_04/Day-04.html
@@ -165,7 +165,7 @@
                 </svg>
                 <div class="num">
                   <h2>70<span>%</span></h2>
-                </div>
+                </div>z
               </div>
               <h2 class="text">Html</h2>
             </div>
@@ -217,7 +217,7 @@
               Femihealth@hotmail.com<br><strong>WEBSITE:</strong> www.FOx1245.com</p>
           </div>
 
-          <div class="col-form">
+           <div class="col-form">
             <div class="container-2">
               <form action="/Day-04.php">
                 <input type="text" id="name" name="name" placeholder="Name" required>
@@ -231,6 +231,7 @@
       </section>
       <div class="footer"></div>
   </main>
+
 
   <!-- Font Awesome -->
   <script src="../fontawesome-free-6.6.0-web/js/all.min.js"></script>
